<resources>
    <string name="app_name">Business Invoice</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_invoice">Add Invoice</string>
    <string name="add_client">Add Client</string>
    <string name="invoice_number">Invoice Number:</string>
    <string name="add_invoice_data">Submit</string>
    <string name="first_name">First name:</string>
    <string name="client_first_name">First name:</string>
    <string name="add_client_data">Submit</string>
    <string name="client_last_name">Last name:</string>
    <string name="client_phone_number">Phone number:</string>
    <string name="client_city">City:</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
</resources>
