<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/dashboard"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:background="@drawable/border_button"
            android:textColor="@color/menuButtonsTextColor"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/add_invoice"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_invoice"
            android:background="@drawable/border_button"
            android:textColor="@color/menuButtonsTextColor"
            android:onClick="openInvoice"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/add_client"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_client"
            android:background="@drawable/border_button"
            android:textColor="@color/menuButtonActive"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <EditText
            android:id="@+id/client_first_name"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/client_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/client_last_name"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/client_last_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:gravity="center"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/client_phone_number"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/client_phone_number"
            android:inputType="number"/>
        <EditText
            android:id="@+id/client_city"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/client_city"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_client_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_client_data"
        android:background="@drawable/border_button"
        android:textColor="@color/menuButtonsTextColor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>