<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/dashboard"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:background="@drawable/border_button"
            android:textColor="@color/menuButtonsTextColor"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/add_invoice"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_invoice"
            android:background="@drawable/border_button"
            android:textColor="@color/menuButtonActive"
            android:onClick="openInvoice"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/add_client"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_client"
            android:background="@drawable/border_button"
            android:textColor="@color/menuButtonsTextColor"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/invoice_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:hint="@string/invoice_number"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/add_invoice_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_invoice_data"
        android:background="@drawable/border_button"
        android:textColor="@color/menuButtonsTextColor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/invoice_number"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name" />

</RelativeLayout>